<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Agregar_drawer"
            android:icon="@drawable/draweradd"
            android:title="@string/agregar"
            />
        <item
            android:id="@+id/Eliminar_drawer"
            android:icon="@drawable/drawerremoveuser"
            android:title="@string/eliminar" />
        <item
            android:id="@+id/Actualizar_drawer"
            android:icon="@drawable/drawerrefresh"
            android:title="@string/actualizar" />
        <item
            android:id="@+id/Buscar_drawer"
            android:icon="@drawable/drawersearch"
            android:title="@string/buscar" />
        <item
            android:id="@+id/Listar_drawer"
            android:icon="@drawable/sdocument"
            android:title="@string/listar" />

        <item
            android:id="@+id/Sugerencias_drawer"
            android:icon="@drawable/mail"
            android:title="@string/sugerencias" />

        <item
            android:id="@+id/acercade_drawer"
            android:icon="@drawable/acercade"
            android:title="@string/acerca_de" />

    </group>
</menu>
